bk_ida/gccida/c3/unsigned_conversion_warning
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1223:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1224:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1262:40: error: expected expression
else if ( section_name == ( tree_node *)*( &global_trees + 10) ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1262:29: error: use of undeclared identifier 'tree_node'
else if ( section_name == ( tree_node *)*( &global_trees + 10) ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1264:19: error: expected expression
v8 = ( tree_node *)*( &global_trees + 5); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1264:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)*( &global_trees + 5); 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1266:40: error: expected expression
else if ( section_name == ( tree_node *)*( &global_trees + 9) ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1266:29: error: use of undeclared identifier 'tree_node'
else if ( section_name == ( tree_node *)*( &global_trees + 9) ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1268:19: error: expected expression
v8 = ( tree_node *)*( &global_trees + 4); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1268:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)*( &global_trees + 4); 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1270:40: error: expected expression
else if ( section_name == ( tree_node *)*( &global_trees + 8) ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1270:29: error: use of undeclared identifier 'tree_node'
else if ( section_name == ( tree_node *)*( &global_trees + 8) ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1272:19: error: expected expression
v8 = ( tree_node *)*( &global_trees + 3); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1272:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)*( &global_trees + 3); 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1274:40: error: expected expression
else if ( section_name == ( tree_node *)*( &global_trees + 7) ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1274:29: error: use of undeclared identifier 'tree_node'
else if ( section_name == ( tree_node *)*( &global_trees + 7) ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1276:19: error: expected expression
v8 = ( tree_node *)*( &global_trees + 2); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1276:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)*( &global_trees + 2); 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/c-common.c:1278:40: error: expected expression
else if ( section_name == ( tree_node *)*( &global_trees + 6) ) 
                                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unsigned_conversion_warning/src/obj/c-common.o] Error 1
